--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>TITLE</title>
+    <title>Macrosoft</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
 
@@ -66,13 +67,37 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                <img class="d-block w-100" src="assets/images/hero-carousel/1.jpg" alt="First slide">
+                    <img class="d-block w-100" src="assets/images/hero-carousel/1.jpg" alt="First slide">
+                    <div class="hero-item">
+                        <div class="carousel-caption d-none d-md-block">
+                                <h2>Special Offer</h2>
+                                <p>Save on a new bundle</p>
+                                <button class="btn-primary">SHOP NOW <i class="fas fa-chevron-right"></i></button>
+                        </div>
+                    </div>
+                    
                 </div>
+
                 <div class="carousel-item">
-                <img class="d-block w-100" src="assets/images/hero-carousel/2.jpg" alt="Second slide">
+                    <img class="d-block w-100" src="assets/images/hero-carousel/2.jpg" alt="Second slide">
+                    <div class="hero-item">
+                            <div class="carousel-caption d-none d-md-block">
+                                    <h2>Special Offer</h2>
+                                    <p>Save on a new bundle</p>
+                                    <button class="btn-primary">SHOP NOW <i class="fas fa-chevron-right"></i></button>
+                                </div>
+                    </div>
                 </div>
+
                 <div class="carousel-item">
-                <img class="d-block w-100" src="assets/images/hero-carousel/3.jpg" alt="Third slide">
+                    <img class="d-block w-100" src="assets/images/hero-carousel/3.jpg" alt="Third slide">
+                    <div class="hero-item">
+                            <div class="carousel-caption d-none d-md-block">
+                                    <h2>Special Offer</h2>
+                                    <p>Save on a new bundle</p>
+                                    <button class="btn-primary">SHOP NOW <i class="fas fa-chevron-right"></i></button>
+                                </div>
+                    </div>
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -88,16 +113,18 @@
  
         
 
-  </div>  
+    </div>  
 
-  <footer class="footer">
-      <div class="container">
-        <p class="text-left footerP small">Copyright © 2019</p>
-      </div>
-  </footer>
+    <footer class="footer">
+        <div class="container">
+            <p class="text-left footerP small">Copyright © 2019</p>
+        </div>
+    </footer>
 
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <!--Script tag for my JavaScript file-->
-  <script src="assets/javascript/app.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <!--Script tag for my JavaScript file-->
+    <script src="assets/javascript/app.js"></script>
 </body>
 </html>
